--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -21,7 +21,7 @@ CannotIdentify.TYPE = Error
 CannotIdentify.MSG = {0}が特定できません。
 MasterDoesNotExistApprovalRouteGrpMaster.ID = ROT00004
 MasterDoesNotExistApprovalRouteGrpMaster.TYPE = Error
-MasterDoesNotExistApprovalRouteGrpMaster.MSG = 承認ルートグループが承認ルートグループマスタに存在しません。
+MasterDoesNotExistApprovalRouteGrpMaster.MSG = 商品グループマスタまたは承認ルートグループマスタにデータが存在しません。
 ApprovalAuthorityError.ID = ROT00005
 ApprovalAuthorityError.TYPE = Error
 ApprovalAuthorityError.MSG = {0}に承認権限がありません。
