Accountingリポジトリテスト

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -469,3 +469,249 @@ contactToEmail = 宛先メールアドレス
 filePhysicsName = 物理ファイル名
 contentType = コンテンツタイプ
 savedPath = サーバーパス
+rjManageNumber = RJ管理番号
+contractDetailId = 契約明細ID
+transactionDate = 取引年月日
+closingDate = 締日
+dealerFlow = 商流区分
+srvStartDate = サービス期間開始日
+srvEndDate = サービス期間終了日
+webOrderNo = 注文番号
+productTypeCd = 品種コード
+productTypeName = 品種名
+ffmFlag = FFM計上処理フラグ
+cubicFlag = CUBIC計上処理フラグ
+ffmDataCreateDate = データ作成日
+ffmDataCreateTime = データ作成時間
+ffmCompanyCd = FFM会社コード
+ffmContractTypeKbn = 契約種類区分
+ffmDataPtn = 作成データパターン
+ffmAccountType = 勘定識別
+ffmDataType = データ種別
+ffmRedBlackType = 赤黒区分
+ffmMatchingKey = 債権債務照合キー
+ffmNspKey = NSPユニークキー
+ffmProjectNo = 案件番号
+ffmContractDocNo = 契約書番号
+ffmContractNo = 契約番号
+ffmContractDetailNo = 契約明細番号
+ffmBillingDetailNo = 請求明細番号
+ffmInqNo = お問合せ番号
+ffmInqDetailNo = お問合せ明細番号
+ffmArrProjectNo = 手配時の案件番号
+ffmArrInqNo = 手配時の問合せ番号
+ffmCancelReason = 赤伝理由
+ffmOrgContractCd = 元契約番号
+ffmOrgContractDetailNo = 元請求明細番号
+ffmBillingCondition = 請求条件
+ffmTotalBillingCount = 請求分割回数
+ffmContractDate = 契約締結日
+ffmContractPeriodStart = 契約期間（開始）
+ffmContractPeriodEnd = 契約期間（終了）
+ffmContractSscd = 契約ＳＳコード
+ffmContractSspiccd = 契約ＳＳ社員コード
+ffmTrnsLocationCd = 振替先課所コード
+ffmTrnsPicCd = 振替先社員コード
+ffmMntLeaseNo = 保守契約／リース/レンタルＮｏ
+ffmContractPrice = 契約金額
+ffmPriceBeforeInvoice = 仕切前計上金額
+ffmTaxPriceBeforeInvoice = 仕切前消費税額
+ffmProdactCd = 商品コード
+ffmModelId = 機種略号
+ffmSerialId = 機番
+ffmQuotationProdactName = 見積時の入力商品名
+ffmCostProdactName = 原価計上商品コード
+ffmPurchaseType = 仕入区分
+ffmPurchaseDiscntType = 仕入値引区分
+ffmPurchaseClassType = 仕入購買区分
+ffmPurchaseDate = 仕入取引日
+ffmNonRItemCd = 他社商品区分
+ffmSupplierCd = 仕入取引先コード
+ffmDeptAssortType = 仕入課所設定区分
+ffmPurchaseLocationCd = 仕入課所コード
+ffmPurchaseRespClientCd = 仕入責任得意先コード
+ffmRdStrctInventoryCd = 在庫区コード
+ffmDealsNo = 特価番号
+ffmSupplierBillingNo = 仕入先請求ＮＯ
+ffmPaymentProdactName = 商品名（支払通知書用）
+ffmSalesType = 売上区分
+ffmSalesDiscountType = 売上値引区分
+ffmSalesTradeDate = 売上取引日（納品日）
+ffmClientCd = 得意先コード
+ffmSalesLocationType = 売上課所設定区分
+ffmSalesLocationCd = 売上課所コード
+ffmSalesEmpType = 売上社員設定区分
+ffmSalesEmpCd = 売上社員コード
+ffmDiscntNo = 値引番号
+ffmSlipNo = 伝票番号
+ffmContractType = 契約区分
+ffmRevenueCostprice = 売上原価金額
+ffmTrnsPrice = 振替先振替金額
+ffmDistType = 代直区分（販売店データリンク・売上用）
+ffmUserSalesCnt = 売上数量
+ffmUserSalesPrice = ユーザ売上単価
+ffmUserSalesPriceInTax = ユーザ売上単価（税込）
+ffmUserSalesAmt = ユーザ売上金額
+ffmUserSalesAmtInTax = ユーザ売上金額（税込）
+ffmUserSalesTaxType = ユーザ売上消費税区分
+ffmUserSalesTaxRate = ユーザ売上消費税率区分
+ffmUserSalesTaxPrice = ユーザ売上消費税額
+ffmRjSalesCnt = RJ売上数量
+ffmRjSalesPrice = RJ売上単価
+ffmRjSalesPriceInTax = RJ売上単価（税込）
+ffmRjSalesAmt = RJ売上金額
+ffmRjSalesAmtInTax = RJ売上金額（税込）
+ffmRjSalesTaxType = RJ売上消費税区分
+ffmRjSalesTaxRate = RJ売上消費税率区分
+ffmRjSalesTaxPrice = RJ売上消費税額
+ffmRjPurchaseCnt = RJ仕入数量
+ffmRjPurchasePrice = RJ仕入単価
+ffmRjPurchasePriceInTax = RJ仕入単価（税込）
+ffmRjPurchaseAmt = RJ仕入金額
+ffmRjPurchaseAmtInTax = RJ仕入金額（税込）
+ffmRjPurchaseTaxType = RJ仕入消費税区分
+ffmRjPurchaseTaxRate = RJ仕入消費税率区分
+ffmRjPurchaseTaxPrice = RJ仕入消費税額
+ffmShopSalesCnt = 販売店売上数量
+ffmShopSalesPrice = 販売店売上単価
+ffmShopSalesPriceInTax = 販売店売上単価（税込）
+ffmShopSalesAmt = 販売店売上金額
+ffmShopSalesAmtInTax = 販売店売上金額（税込）
+ffmShopSalesTaxType = 販売店売上消費税区分
+ffmShopSalesTaxRate = 販売店売上消費税率区分
+ffmShopSalesTaxPrice = 販売店売上消費税額
+ffmRCostCnt = R原価数量
+ffmRCostPrice = R原価単価
+ffmRCostPriceInTax = R原価単価（税込）
+ffmRCostAmt = R原価金額
+ffmRCostAmtInTax = R原価金額（税込）
+ffmRCostTaxType = R原価消費税区
+ffmRCostTaxRate = R原価消費税率区分
+ffmRCostTaxPrice = R原価消費税額
+ffmCommissionCnt = 手数料数量
+ffmCommissionPrice = 手数料単価
+ffmCommissionPriceInTax = 手数料単価（税込）
+ffmCommissionAmt = 手数料金額
+ffmCommissionAmtInTax = 手数料金額（税込）
+ffmCommissionTaxType = 手数料消費税区分
+ffmCommissionTaxRate = 手数料消費税率区分
+ffmCommissionTaxPrice = 手数料消費税額
+ffmBillDetailCd = 請求書明細識別コード
+ffmBillOutputFlag = 納品書要否区分
+ffmBillOutputPtn = 納品書出力パターン
+ffmBillOutputFmt = 納品書出力形式
+ffmBillOutputSystem = 請求書発行システム
+ffmProdactPtnNo = 商品名パターン番号（納品書・請求書用）
+ffmProdactNameForBill = 商品名（納品書・請求書用）
+ffmMessageForBiz = 業務への連絡事項
+ffmRemarkForBill = 備考（納品書・請求書用）
+ffmRBillingPeriodStart = 請求期間（開始）
+ffmRBillingPeriodEnd = 請求期間（終了）
+ffmBillingYm = 請求月
+ffmThisBillingCnt = 今回の請求回数
+ffmCounter = カウンター
+ffmOutputComment1 = コメント１
+ffmOutputComment2 = コメント２
+ffmForcedFlag = 強制フラグ
+ffmInstalltionName = 機器設置先名
+ffmInstalltionDptName = 機器設置先部課名
+ffmRingsDstCd = RINGS届先コード(3桁）
+ffmOeDstCd = OE届先コード(11桁）
+ffmDstType = 納品場所識別
+ffmDstName1 = 届先名１（会社名）
+ffmDstName2 = 届先名２（会社部課名）
+ffmDstClientName = 顧客名
+ffmDstAddr1 = 届先住所１
+ffmDstAddr2 = 届先住所２
+ffmDstAddr3 = 届先住所３
+ffmDstZipCd = 届先郵便番号
+ffmDstTel = 届先電話番号
+ffmDstFax = 届先ＦＡＸ番号
+ffmDstNameKana = 届先名（カナ）
+ffmClientCdSec = 得意先コード（二次店）
+ffmDstCdSec = 届先コード（二次店）
+ffmInterestExpensePrice = 支払利息相当額
+ffmInterestIncomePrice = 受取利息相当額
+ffmQuotationCd = 見積番号
+ffmQuotationDetailCd = 見積明細番号
+ffmMainQuotationDetailCd = 本体見積明細番号
+chgBillingText = R請求書摘要
+chgRCompanyCode1st = 一次店R会社コード
+chgRCompanyName1st = 一次店R会社名
+chgShopId1st = 一次店販売店ID
+chgShopName1st = 一次店販売店名
+chgShopText1st = 一次店販売店摘要
+chgRCompanyCode2st = 二次店R会社コード
+chgRCompanyName2st = 二次店R会社名
+chgShopId2st = 二次店販売店ID
+chgShopName2st = 二次店販売店名
+chgShopText2st = 二次店販売店摘要
+cubicFmtType = フォーマット種別
+cubicAccountingCd = 勘定科目コード
+cubicLcType = 貸借区分
+cubicSystemCd = システムコード
+cubicCompanyCd = CUBIC会社コード
+cubicAccountingDate = 会計計上日
+cubicVoucherDate = 伝票ＮＯ
+cubicVoucherDetailDate = 伝票明細NO
+cubicAccountDeptCd = 計上部門コード
+cubicProductAxis = 商品軸
+cubicSalesAxis = 営業軸
+cubicFinancialIdentifier = 決算識別子
+cubicProductTypeCd = CUBIC品種コード
+cubicInDecReason = 増減理由
+cubicEnvAccountCd = 環境会計コード
+cubicProjectCd = プロジェクトコード
+cubicCount = 数量
+cubicAmount = 取引金額
+cubicAmountForForeign = 外貨取引金額
+cubicCurrencyCd = 通貨コード
+cubicCurrencyConvType = 通貨換算タイプ
+cubicCurrencyConvRate = 通貨換算レート
+cubicCurrencyConvDate = 通貨換算日
+cubicText = 摘要
+cubicTextDetail = 明細摘要
+cubicCoSegment = 各社セグメント
+cubicCoSegment1 = 管理セグメント予備2
+cubicCoSegment2 = 管理セグメント予備3
+cubicDeleteKey = 消し込みキー
+cubicOperatorCd = 扱い者コード
+cubicGreenBuyCd = グリーン購買コード
+cubicProjectNo = 案件ＮＯ
+cubicDfNo = Ｄ／Ｆ　ＮＯ
+cubicBudgetNo = 予算ＮＯ
+cubicClientCd = 顧客コード
+cubicCoMgtSegment = 各社固有管理セグメント1
+cubicTransactionDate = 取引日
+cubicBillDstSiteCd = 請求先サイトコード
+cubicDomesticForeignType = 国内／海外区分
+cubicSalesPriceNoTax = 取引単価（税抜）
+cubicSalesPriceForeign = 外貨取引単価
+cubicRecoveryReqName = 回収条件名
+cubicRecoveryMethodName = 回収方法名
+cubicRecoveryDate = 回収起算日
+cubicBillingTypeName = 請求分類名
+cubicBillDetailTypeCode = CUBIC請求書明細識別コード
+cubicDiscountName = 値引名称
+cubicBillOutputType = 請求書発行区分
+cubicBillingNo = 請求書ＮＯ
+cubicDocumentaryBillNo = 荷為替手形ＮＯ
+cubicPcKeyNo = Ｐ／ＣキーＮＯ
+cubicBillingOutputNo = 請求書出力用伝票ＮＯ
+cubicReceivedOrderNo = 受注ＮＯ
+cubicOrderNo = 発注ＮＯ
+cubicBeforeManageNo = 前受管理ＮＯ
+cubicBeforeCancelAmt = 前受金消込額
+cubicAddTerm = 追加ＴＥＲＭ
+cubicContractNo = 契約NO
+cubicProdactName = 品名
+cubicMatchingKey = 債権債務汎用照合キー
+cubicGeneralTransferData = 汎用転送データ
+cubicOrgSlipNoForRed = 元伝票ＮＯ（赤伝時）
+cubicOrgSlipDetailNoForRed = 元伝票明細ＮＯ（赤伝時）
+cubicOrgAcctDateForRed = 元会計計上日（赤伝時）
+cubicDstSiteCd = 設置先サイトコード
+cubicItem1 = 項目予備1
+cubicItem2 = 項目予備2
+cubicItem3 = 項目予備3
+extendItem = 拡張項目
