計上エンティティ修正

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -479,8 +479,8 @@ srvEndDate = サービス期間終了日
 webOrderNo = 注文番号
 productTypeCd = 品種コード
 productTypeName = 品種名
-ffmFlag = FFM計上処理フラグ
-cubicFlag = CUBIC計上処理フラグ
+ffmFlg = FFM計上処理フラグ
+cubicFlg = CUBIC計上処理フラグ
 ffmDataCreateDate = データ作成日
 ffmDataCreateTime = データ作成時間
 ffmCompanyCd = FFM会社コード
@@ -597,7 +597,7 @@ ffmCommissionTaxType = 手数料消費税区分
 ffmCommissionTaxRate = 手数料消費税率区分
 ffmCommissionTaxPrice = 手数料消費税額
 ffmBillDetailCd = 請求書明細識別コード
-ffmBillOutputFlag = 納品書要否区分
+ffmBillOutputFlg = 納品書要否区分
 ffmBillOutputPtn = 納品書出力パターン
 ffmBillOutputFmt = 納品書出力形式
 ffmBillOutputSystem = 請求書発行システム
@@ -612,7 +612,7 @@ ffmThisBillingCnt = 今回の請求回数
 ffmCounter = カウンター
 ffmOutputComment1 = コメント１
 ffmOutputComment2 = コメント２
-ffmForcedFlag = 強制フラグ
+ffmForcedFlg = 強制フラグ
 ffmInstalltionName = 機器設置先名
 ffmInstalltionDptName = 機器設置先部課名
 ffmRingsDstCd = RINGS届先コード(3桁）
