メッセージプロパティ追加（RBA00007）

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -222,6 +222,9 @@ ZuoraBatchFilePathError.MSG = 絶対パスを指定してください。
 ZuoraBatchDateParameterFormatError.ID = RBA00006
 ZuoraBatchDateParameterFormatError.TYPE = Error
 ZuoraBatchDateParameterFormatError.MSG = {0}のフォーマットは{1}です。
+ConvertFailureError.ID = RBA00007
+ConvertFailureError.TYPE = Error
+ConvertFailureError.MSG = {0}から{1}への変換に失敗しました。
 
 #フィールド名
 SortColumn = ソート項目
