zuora売上計算結果取得バッチ対応

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -99,6 +99,9 @@ FileAlreadyExistsError.MSG = {0}にすでにファイルがあります。
 DirectoryNotFoundError.ID = ROT00110
 DirectoryNotFoundError.TYPE = Error
 DirectoryNotFoundError.MSG = 指定されたディレクトリが存在しません。
+FileReadError.ID = ROT00111
+FileReadError.TYPE = Error
+FileReadError.MSG = 指定されたファイルの読み込みに失敗しました。
 
 #エラーID(見積)
 EntityDoesNotExistEstimation.ID = RES00001
@@ -237,6 +240,12 @@ ZuoraBatchDateParameterFormatError.MSG = {0}のフォーマットは{1}です。
 ConvertFailureError.ID = RBA00007
 ConvertFailureError.TYPE = Error
 ConvertFailureError.MSG = {0}から{1}への変換に失敗しました。
+APIPathError.ID = RBA00008
+APIPathError.TYPE = Error
+APIPathError.MSG = {0}のパスに誤りがあります。
+APIGetFailsError.ID = RBA00009
+APIGetFailsError.TYPE = Error
+APIGetFailsError.MSG = {0}APIによる{1}の取得に失敗しました。
 
 #フィールド名
 SortColumn = ソート項目
