契約情報取り込み　メッセージ追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -252,6 +252,12 @@ APIPathError.MSG = {0}のパスに誤りがあります。
 APIGetFailsError.ID = RBA00009
 APIGetFailsError.TYPE = Error
 APIGetFailsError.MSG = {0}APIによる{1}の取得に失敗しました。
+BatchCannotCompleteByUnexpectedError.ID = RBA00010
+BatchCannotCompleteByUnexpectedError.TYPE = Error
+BatchCannotCompleteByUnexpectedError.MSG = 想定外のエラーにつき、{0}を完了できません。
+CallAPIErrorBatch.ID = RBA00011
+CallAPIErrorBatch.TYPE = Error
+CallAPIErrorBatch.MSG = {0}の{1}API実行に失敗しました。
 
 #フィールド名
 SortColumn = ソート項目
