差戻API用エラーメッセージ追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -133,6 +133,12 @@ AccessAbstainError.MSG = 対応する投票クラスが存在しません。
 AfterDateError.ID = ROT00036
 AfterDateError.TYPE = Error
 AfterDateError.MSG = {0}は{1}以前の日付を設定してください。
+LowOrderApproverNotApprovalRemandError.ID = ROT00037
+LowOrderApproverNotApprovalRemandError.TYPE = Error
+LowOrderApproverNotApprovalRemandError.MSG = 下位承認者が未承認のため、差戻は行えません。
+ApprovedNotApprovalRemandError.ID = ROT00038
+ApprovedNotApprovalRemandError.TYPE = Error
+ApprovedNotApprovalRemandError.MSG = 既に承認済のため、差戻は行えません。
 
 
 #エラーID(共通:ファイル系)
