ROC用カラム追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1276,3 +1276,5 @@ contactStoreCommissionAmount = 接点店手数料金額
 motherStoreCommissionAmount = 接点店手数料金額
 overuseQuantity = 超過使用量
 documentId = 文書ID
+manualUpdateFlg = 手動更新フラグ
+apiRequest = APIリクエスト
