従量超過分使用量取込パラメータ取得APIをエラーメッセージ追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -393,6 +393,17 @@ DataMissMatchOutputPageNum.ID = RRP00006
 DataMissMatchOutputPageNum.TYPE = Error
 DataMissMatchOutputPageNum.MSG = 出力対象ページと帳票データ部マッピングリストの数が不正です。
 
+#エラーID(課金計上連携)
+ExternalLinkageInvalidParameterError.ID = REX00001
+ExternalLinkageInvalidParameterError.TYPE = Error
+ExternalLinkageInvalidParameterError.MSG = パラメーターに不正な項目が設定されています。
+ExternalLinkageAlreadyLinkedError = REX00002
+ExternalLinkageAlreadyLinkedError = Error
+ExternalLinkageAlreadyLinkedError = すでに連携済みです。
+ExternalLinkageDoesNotExcessAmountItemError = REX00003
+ExternalLinkageDoesNotExcessAmountItemError = Error
+ExternalLinkageDoesNotExcessAmountItemError = 指定した品種コードは従量超過分の品種ではありません。
+
 #情報ID(バッチ)
 BatchCreateFileStartInfo.ID = IBA00001
 BatchCreateFileStartInfo.TYPE = Info
