未サポートエラー追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -140,7 +140,6 @@ ApprovedNotApprovalRemandError.ID = ROT00038
 ApprovedNotApprovalRemandError.TYPE = Error
 ApprovedNotApprovalRemandError.MSG = 既に承認または差戻済みのため、差戻は行えません。
 
-
 #エラーID(共通:ファイル系)
 FileNotFoundError.ID = ROT00100
 FileNotFoundError.TYPE = Error
@@ -187,6 +186,11 @@ FileMappingFailed.MSG = {0}のマッピングに失敗しました。
 FileFormatInvalidError.ID = ROT00114
 FileFormatInvalidError.TYPE = Error
 FileFormatInvalidError.MSG = 選択したファイルは取込できません。ファイルフォーマットを確認してください。
+
+#エラーID(共通:その他)
+UnsupportedProcessError.ID = ROT90001
+UnsupportedProcessError.Error = Error
+UnsupportedProcessError.MSG = 対象データへの処理はサポートされていません。
 
 #エラーID(見積)
 EntityDoesNotExistEstimation.ID = RES00001
