手動更新API用エラーメッセージ追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -324,6 +324,12 @@ ItemCodeDuplicateError.MSG = 品種コード{0}が複数登録されています
 lowerLimitError.ID = RCO00023
 lowerLimitError.TYPE = Error
 lowerLimitError.MSG = {0}が値引き限度額を下回っています。
+CannotContractManualUpdateByLifecycleError.ID = RCO00024
+CannotContractManualUpdateByLifecycleError.TYPE = Error
+CannotContractManualUpdateByLifecycleError.MSG = ライフサイクル状態が「締結中」の契約情報に対して、「締結待ち」の契約情報及び、「予定日待ち」の契約情報が存在しているため、契約手動更新は行えません。
+CannotContractManualUpdateByUpdateTypeError.ID = RCO00025
+CannotContractManualUpdateByUpdateTypeError.TYPE = Error
+CannotContractManualUpdateByUpdateTypeError.MSG = 契約更新方式区分が「自動更新」ではないため、契約手動更新は行えません。
 
 #エラーID(手配)
 EntityDoesNotExistArrangement.ID = RAR00001
