--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -329,7 +329,7 @@ CannotContractManualUpdateByLifecycleError.TYPE = Error
 CannotContractManualUpdateByLifecycleError.MSG = ライフサイクル状態が「締結中」の契約情報に対して、「締結待ち」の契約情報及び、「予定日待ち」の契約情報が存在しているため、契約手動更新は行えません。
 CannotContractManualUpdateByUpdateTypeError.ID = RCO00025
 CannotContractManualUpdateByUpdateTypeError.TYPE = Error
-CannotContractManualUpdateByUpdateTypeError.MSG = 契約更新方式区分が「自動更新」ではないため、契約手動更新は行えません。
+CannotContractManualUpdateByUpdateTypeError.MSG = 契約更新方式区分が「{0}」ではないため、契約手動更新は行えません。
 
 #エラーID(手配)
 EntityDoesNotExistArrangement.ID = RAR00001
