--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1180,3 +1180,4 @@ contractPicAccCeEmp = 契約受付担当CE社員
 contractPicIntCeEmp = 契約導入担当CE社員
 contractEquipmentList = 契約機種
 contractInstallationLocation = 設置先(契約用)
+registryType = 登録種別
