--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -284,7 +284,7 @@ DoneContractPlanChangeError.TYPE = Error
 DoneContractPlanChangeError.MSG = すでに作成中の契約変更後の契約が存在するため、契約変更は行えません。
 MismatchContractLifecycleStatusError.ID = RCO00010
 MismatchContractLifecycleStatusError.TYPE = Error
-MismatchContractLifecycleStatusError.MSG = ライフサイ\uFFFD\uFFFD\uFFFDル状態が一致しません。
+MismatchContractLifecycleStatusError.MSG = ライフサイクル状態が一致しません。
 ContractInvalidParameterError.ID = RCO00011
 ContractInvalidParameterError.TYPE = Error
 ContractInvalidParameterError.MSG = パラメーターに不正な項目が設定されています。
@@ -415,7 +415,7 @@ ExternalLinkageInvalidParameterError.TYPE = Error
 ExternalLinkageInvalidParameterError.MSG = パラメーターに不正な項目が設定されています。
 ExternalLinkageAlreadyLinkedError.ID = REX00002
 ExternalLinkageAlreadyLinkedError.TYPE = Error
-ExternalLinkageAlreadyLinkedError.MSG = すでに連携済みです。
+ExternalLinkageAlreadyLinkedError.MSG = すでに連携済み\uFFFD\uFFFD\uFFFDす。
 ExternalLinkageDoesNotExcessAmountItemError.ID = REX00003
 ExternalLinkageDoesNotExcessAmountItemError.TYPE = Error
 ExternalLinkageDoesNotExcessAmountItemError.MSG = 指定した品種コードは従量超過分の品種ではありません。
@@ -488,7 +488,7 @@ BatchEstimationStatusErrorSkip.TYPE = Error
 BatchEstimationStatusErrorSkip.MSG = RTS見積番号＝{0} 該当する見積のステータスが{1}なので同じRTS見積番号を指定したデータの処理をスキップします。
 BatchEstimationNotFoundErrorSkip.ID = RBA00016
 BatchEstimationNotFoundErrorSkip.TYPE = Error
-BatchEstimationNotFoundErrorSkip.MSG = RTS見積番号＝{0} 問合せ番号＝{1} 問合せ明細番号＝{2} 該当する明細が存在しないため同じRTS見積番号を指定したデータの処理をスキップします。
+BatchEstimationNotFoundErrorSkip.MSG = RTS見積番号＝{0} 問合せ番号＝{1} 問\uFFFD\uFFFDせ明細番号＝{2} 該当する明細が存在しないため同じRTS見積番号を指定したデータの処理をスキップします。
 BatchEstimationQtyNotMatchErrorSkip.ID = RBA00017
 BatchEstimationQtyNotMatchErrorSkip.TYPE = Error
 BatchEstimationQtyNotMatchErrorSkip.MSG = RTS見積番号＝{0} 問合せ番号＝{1} 問合せ明細番号＝{2} 明細の数量が一致しないため同じRTS見積番号を指定したデータの処理をスキップします。
@@ -574,7 +574,7 @@ publishPostNumber = 見積発行元郵便番号
 publishAddress = 見積発行元住所
 publishTel = 見積発行元電話番号
 publishFax = 見積発行元FAX番号
-publishEmployee = 見積発行元担当者名
+publishEmployee = 見積発行元担当者\uFFFD\uFFFD
 spPriceApplyReason = 特価希望理由
 spPriceApplyReasonText = 特価希望理由テキスト
 mainCompetitorName = 主競合先名称
@@ -786,7 +786,7 @@ contractDetailId = 契約明細ID
 transactionDate = 取引年月日
 closingDate = 締日
 dealerFlow = 商流区分
-srvStartDate = \uFFFD\uFFFDービス期間開始日
+srvStartDate = サービス期間開始日
 srvEndDate = サービス期間終了日
 webOrderNo = 注文番号
 productTypeCd = 品種コード
@@ -982,7 +982,7 @@ cubicCurrencyConvType = 通貨換算タイプ
 cubicCurrencyConvRate = 通貨換算レート
 cubicCurrencyConvDate = 通貨換算日
 cubicText = 摘要
-cubicTextDetail = 明細\uFFFD\uFFFD\uFFFD要
+cubicTextDetail = 明細摘要
 cubicCoSegment = 各社セグメント
 cubicCoSegment1 = 管理セグメント予備2
 cubicCoSegment2 = 管理セグメント予備3
@@ -1076,7 +1076,7 @@ item5 = 固有項目5
 item6 = 固有項目6
 item7 = 固有項目7
 item8 = 固有項目8
-item9 = 固有項目9
+item9 = \uFFFD\uFFFD\uFFFD有項目9
 item10 = 固有項目10
 item11 = 固有項目11
 item12 = 固有項目12
@@ -1192,7 +1192,7 @@ inputAddress = MoM非連携_住所(手入力)
 issueTaxCodeValue = 帳票用消費税率区分
 picNameKana = 担当者名（カナ）
 dealerNameKana = 販売店名（カナ）
-companyRepresentativeName = MoM非連携_企\uFFFD\uFFFD\uFFFD代表者名
+companyRepresentativeName = MoM非連携_企業代表者名
 companyRepresentativeNameKana = MoM非連携_企業代表者名(カナ)
 momCustId = MoM企事部ID
 salesCompanyNameKana = 販売店名（カナ）
@@ -1285,7 +1285,7 @@ applicantRepresentativeName = 申込者：代表者名
 applicantAddress = 申込者：住所
 applicantPostNumber = 申込者：郵便番号
 applicantPicDepartmentName = 申込者：担当部課名
-applicantPicPhoneNumber = 申込\uFFFD\uFFFD：担当電話番号
+applicantPicPhoneNumber = 申込者：担当電話番号
 applicantPicFaxNumber = 申込者：担当FAX番号
 applicantPicName = 申込者：担当者名
 resellerDealerName = 担当販売店：販売店名
