手配業務作業完了APIエラーメッセージ追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -386,6 +386,15 @@ UnsupportedExecuteError.MSG = 実施処理が定義されていません。
 ArrangementCreditCheckError.ID = RAR00018
 ArrangementCreditCheckError.TYPE = Error
 ArrangementCreditCheckError.MSG = 与信チェックが実施されていません。
+DateForeEndCheckError.ID = RAR00019
+DateForeEndCheckError.TYPE = Error
+DateForeEndCheckError.MSG = {0}は月初を設定してください。
+DateMonthEndCheckError.ID = RAR00020
+DateMonthEndCheckError.TYPE = Error
+DateMonthEndCheckError.MSG = {0}は月末を設定してください。
+CommercialFlowDivArrangementRocCheckError.ID = RAR00021
+CommercialFlowDivArrangementRocCheckError.TYPE = Error
+CommercialFlowDivArrangementRocCheckError.MSG = 商流区分は「代売_接点店」または「代売_母店_接点店」を設定してください。
 
 #エラーID(コミュニケーション)
 EntityDoesNotExistCommunication.ID = RCM00001
