エラーメッセージ追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -395,6 +395,9 @@ DateMonthEndCheckError.MSG = {0}は月末を設定してください。
 CommercialFlowDivArrangementRocCheckError.ID = RAR00021
 CommercialFlowDivArrangementRocCheckError.TYPE = Error
 CommercialFlowDivArrangementRocCheckError.MSG = 商流区分は「代売_接点店」または「代売_母店_接点店」を設定してください。
+ContractAttachedFileCheckError.ID = RAR00022
+ContractAttachedFileCheckError.TYPE = Error
+ContractAttachedFileCheckError.MSG = {0}にチェックを入れてください。
 
 #エラーID(コミュニケーション)
 EntityDoesNotExistCommunication.ID = RCM00001
