--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1179,6 +1179,7 @@ errorInfo = エラー情報
 targetApi = 対象API（エラー発生箇所システム）
 message = エラー内容
 contructInfo = 契約情報
+contractInfo = 契約情報
 ratePlanChargeInfo = レートプランチャージ情報
 productId = プロダクトID
 productRatePlanId = 料金プランID
@@ -1187,6 +1188,9 @@ ratePlanChargeId = レートプランチャージID
 tenantId = テナントID
 zuoraAccountId = ZuoraアカウントId
 userId = ユーザID
+corporationCode = 会社コード
+domainId = ドメインID
+
 subscriptionNumber = サブスクリプション番号
 transToServiceOrgCode = 振替先課所コード
 transToServiceOrgName = 振替先課所名
