--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -189,7 +189,7 @@ FileFormatInvalidError.MSG = 選択したファイルは取込できません。
 
 #エラーID(共通:その他)
 UnsupportedProcessError.ID = ROT90001
-UnsupportedProcessError.Error = Error
+UnsupportedProcessError.TYPE = Error
 UnsupportedProcessError.MSG = 対象データへの処理はサポートされていません。
 
 #エラーID(見積)
