契約一覧情報詳細取得API用DTO項目追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1357,3 +1357,4 @@ manualUpdateFlg = 手動更新フラグ
 apiRequest = APIリクエスト
 registryType = 登録種別
 vendorManageNumberName = ベンダー管理番号名称
+serviceProviderCompanyName = サービス提供会社名
