契約承認エラーメッセージ追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -342,6 +342,9 @@ CannotContractManualUpdateByUpdateTypeError.MSG = 契約更新方式区分が「
 CannotContractAutoUpdateByExistsInvalidValueError.ID = RCO00026
 CannotContractAutoUpdateByExistsInvalidValueError.TYPE = Error
 CannotContractAutoUpdateByExistsInvalidValueError.MSG = {0}に{1}が存在しているため、契約自動更新は行えません。
+BusinessDaysFromLastDayApprovalError.ID = RCO00027
+BusinessDaysFromLastDayApprovalError.TYPE = Error
+BusinessDaysFromLastDayApprovalError.MSG = 承認日が月末-3営業日以降のため、承認は行えません。
 
 #エラーID(手配)
 EntityDoesNotExistArrangement.ID = RAR00001
