--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -342,6 +342,9 @@ CannotContractManualUpdateByUpdateTypeError.MSG = 契約更新方式区分が「
 CannotContractAutoUpdateByExistsInvalidValueError.ID = RCO00026
 CannotContractAutoUpdateByExistsInvalidValueError.TYPE = Error
 CannotContractAutoUpdateByExistsInvalidValueError.MSG = {0}に{1}が存在しているため、契約自動更新は行えません。
+NotTransferableOrgError.ID = RCO00027
+NotTransferableOrgError.TYPE = Error
+NotTransferableOrgError.MSG = {0}にはCUBIC部門コードが支社コード＋課所コードのMoM組織を選択してください。
 
 #エラーID(手配)
 EntityDoesNotExistArrangement.ID = RAR00001
