#6596 手配業務完了順マスタリポジトリをQueryを使用したメソッドへ修正

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -412,7 +412,7 @@ ContractAttachedFileCheckError.TYPE = Error
 ContractAttachedFileCheckError.MSG = {0}にチェックを入れてください。
 ArrangementOrderCheckError.ID = RAR00023
 ArrangementOrderCheckError.TYPE = Error
-ArrangementOrderCheckError.MSG = {0}が完了していないため、当手配を完了することができません。。
+ArrangementOrderCheckError.MSG = {0}が完了していないため、当手配を完了することができません。
 
 #エラーID(コミュニケーション)
 EntityDoesNotExistCommunication.ID = RCM00001
