--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -418,7 +418,7 @@ PicSaDummyUserError.TYPE = Error
 PicSaDummyUserError.MSG = 担当営業にダミーユーザーが設定されているので、担当営業を再設定してください。
 ArrangementOrderCheckError.ID = RAR00024
 ArrangementOrderCheckError.TYPE = Error
-ArrangementOrderCheckError.MSG = {0}が完了していないため、当手配を完了することができません。。
+ArrangementOrderCheckError.MSG = {0}が完了していないため、当手配を完了することができません。
 
 #エラーID(コミュニケーション)
 EntityDoesNotExistCommunication.ID = RCM00001
