エラーメッセージ修正のcherry-pick

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -419,9 +419,9 @@ PicSaDummyUserError.MSG = 担当営業にダミーユーザーが設定されて
 ArrangementOrderCheckError.ID = RAR00024
 ArrangementOrderCheckError.TYPE = Error
 ArrangementOrderCheckError.MSG = {0}が完了していないため、当手配を完了することができません。
-ArrangementOrderCheckError.ID = RAR00025
-ArrangementOrderCheckError.TYPE = Error
-ArrangementOrderCheckError.MSG = {0}が未連携です。連携するまでお待ちください。
+UnlinkedError.ID = RAR00025
+UnlinkedError.TYPE = Error
+UnlinkedError.MSG = {0}が未連携です。連携するまでお待ちください。
 
 #エラーID(コミュニケーション)
 EntityDoesNotExistCommunication.ID = RCM00001
