--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -345,6 +345,9 @@ CannotContractAutoUpdateByExistsInvalidValueError.MSG = {0}に{1}が存在して
 NotTransferableOrgError.ID = RCO00027
 NotTransferableOrgError.TYPE = Error
 NotTransferableOrgError.MSG = {0}にはCUBIC部門コードが支社コード＋課所コードのMoM組織を選択してください。
+CancelScheduledDateAfterError.ID = RCO00028
+CancelScheduledDateAfterError.TYPE = Error
+CancelScheduledDateAfterError.MSG = 当月分の解約可能日を超えています。解約申込可能日を入力してください。
 
 #エラーID(手配)
 EntityDoesNotExistArrangement.ID = RAR00001
