--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1372,6 +1372,7 @@ salesCompanyPurchaseAmount = 販社仕入金額
 contactStoreCommissionAmount = 接点店手数料金額
 motherStoreCommissionAmount = 接点店手数料金額
 overuseQuantity = 超過使用量
+osoLinkableFlg = OSO連携可能フラグ
 documentId = 文書ID
 manualUpdateFlg = 手動更新フラグ
 apiRequest = APIリクエスト
