--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -268,6 +268,9 @@ MismatchContractTypeInitialCountError.MSG = 初期費の数量と商材固有項
 VupLinkageCancellationFoundError.ID = RES00022
 VupLinkageCancellationFoundError.TYPE = Error
 VupLinkageCancellationFoundError.MSG = 解約はV-UP反映不要です。
+RunningPricesUnMatchError.ID = RES00023
+RunningPricesUnMatchError.TYPE = Error
+RunningPricesUnMatchError.MSG = ランニングの明細の価格と品種マスタの価格が一致しません。
 
 #エラーID(契約)
 EntityDoesNotExistContract.ID = RCO00001
