Messages.propertiesに練習用カラムを追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1209,6 +1209,7 @@ reportSpecificResult = 帳票テンプレート特定結果
 cancelReason1 = 解約理由1
 cancelReason2 = 解約理由2
 improvementPoint = 改善ポイント
+satoRensyu = 練習用カラム
 
 #手配結果登録パラメータ
 id = ID
