年額商品契約更新のサービス利用希望日変更時のエラーメッセージを修正

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -362,7 +362,7 @@ BusinessDaysFromLastDayApprovalError.TYPE = Error
 BusinessDaysFromLastDayApprovalError.MSG = 承認日が月末-3営業日以降のため、承認は行えません。
 ConclusionPreferredDateUneditableError.ID = RCO00030
 ConclusionPreferredDateUneditableError.TYPE = Error
-ConclusionPreferredDateUneditableError.MSG = 年額商品の契約更新のためサービス利用開始日を変更できません。
+ConclusionPreferredDateUneditableError.MSG = 年額商品の契約更新のためサービス利用希望日を変更できません。
 
 #エラーID(手配)
 EntityDoesNotExistArrangement.ID = RAR00001
