年額商品契約更新のサービス利用希望日変更時のエラーメッセージを修正

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -371,7 +371,7 @@ RegisteringProductsError.TYPE = Error
 RegisteringProductsError.MSG = 商材積上登録中のため契約変更は行えません。しばらく経ってから再度操作を行ってください。
 ConclusionPreferredDateUneditableError.ID = RCO00032
 ConclusionPreferredDateUneditableError.TYPE = Error
-ConclusionPreferredDateUneditableError.MSG = 年額商品の契約更新のためサービス利用開始日を変更できません。
+ConclusionPreferredDateUneditableError.MSG = 年額商品の契約更新のためサービス利用希望日を変更できません。
 
 #エラーID(手配)
 EntityDoesNotExistArrangement.ID = RAR00001
