--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1394,3 +1394,4 @@ apiRequest = APIリクエスト
 registryType = 登録種別
 vendorManageNumberName = ベンダー管理番号名称
 serviceProviderCompanyName = サービス提供会社名
+penaltyFfmOrderContactNo = FFM発注問合せ番号
