#6906 JSONエラーメッセージ追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -145,6 +145,9 @@ NotDateError.MSG = {0}は{1}以外の日付を設定してください。
 OptimisticLockError.ID = ROT00040
 OptimisticLockError.TYPE = Error
 OptimisticLockError.MSG = 既に他のユーザーに変更されています。最新の状態で再度実行してください。
+JsonParseError.ID = ROT00041
+JsonParseError.TYPE = Error
+JsonParseError.MSG = JSON文字列の解析/変換に失敗しました。
 
 #エラーID(共通:ファイル系)
 FileNotFoundError.ID = ROT00100
