--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -365,7 +365,7 @@ MinContractMonthsOverError.TYPE = Error
 MinContractMonthsOverError.MSG = 最低利用期間を満たさないため、違約金の手配が必要です。別途V-UPで違約金の発注をおこなってください。
 RegisteringProductsError.ID = RCO00031
 RegisteringProductsError.TYPE = Error
-RegisteringProductsError.MSG = 商材積上登録中のため契約変更は行えません。1時間以上待ってから再度操作を行ってください。
+RegisteringProductsError.MSG = 商材積上登録中のため契約変更は行えません。しばらく経ってから再度操作を行ってください。
 
 #エラーID(手配)
 EntityDoesNotExistArrangement.ID = RAR00001
