#8689 ライセンスエラーメッセージ追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -489,6 +489,11 @@ ExternalLinkageClosedFileImportError.ID = REX00004
 ExternalLinkageClosedFileImportError.TYPE = Error
 ExternalLinkageClosedFileImportError.MSG = 今月分のファイル取り込みは完了したため、新たなファイル取り込みはできません。
 
+#エラーID(ライセンス)
+EntityDoesNotExistLicense.ID = RLI00001
+EntityDoesNotExistLicense.TYPE = Error
+EntityDoesNotExistLicense.MSG = 指定した{0}が存在しません。
+
 #情報ID(バッチ)
 BatchCreateFileStartInfo.ID = IBA00001
 BatchCreateFileStartInfo.TYPE = Info
