--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -148,6 +148,9 @@ OptimisticLockError.MSG = 既に他のユーザーに変更されています。
 JsonParseError.ID = ROT00041
 JsonParseError.TYPE = Error
 JsonParseError.MSG = JSON文字列の解析/変換に失敗しました。
+OeTodokesakiCodeError.ID = ROT00042
+OeTodokesakiCodeError.TYPE = Error
+OeTodokesakiCodeError.MSG = 上流システムコードに紐づく届先情報に不備があります。代表届先コード無、O/E届先コード無、受注可否区分が受注不可のいずれかに該当する届先は利用できません。拠点業務にご確認ください。
 
 #エラーID(共通:ファイル系)
 FileNotFoundError.ID = ROT00100
