#7643 契約.ベンダー向けコメントを追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1305,6 +1305,7 @@ contractPicIntCeEmp = 契約導入担当CE社員
 contractEquipmentList = 契約機種
 contractInstallationLocation = 設置先(契約用)
 vendorManageNumber = ベンダー管理番号
+toVendorComment = ベンダー向けコメント
 contractSpan = 契約期間
 itemAddFlg = 品種追加フラグ
 makerItemCode = メーカー商品コード
