チェックリストエラーメッセージ追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -148,6 +148,9 @@ OptimisticLockError.MSG = 既に他のユーザーに変更されています。
 JsonParseError.ID = ROT00041
 JsonParseError.TYPE = Error
 JsonParseError.MSG = JSON文字列の解析/変換に失敗しました。
+RequiredCheckListError.ID = ROT00042
+RequiredCheckListError.TYPE = Error
+RequiredCheckListError.MSG = チェックリストのチェック内容を確認してください。未チェックのチェックボタンがあります。
 
 #エラーID(共通:ファイル系)
 FileNotFoundError.ID = ROT00100
