ライセンスドメインCAS用DTO作成

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1404,3 +1404,19 @@ registryType = 登録種別
 vendorManageNumberName = ベンダー管理番号名称
 serviceProviderCompanyName = サービス提供会社名
 penaltyFfmOrderContactNo = FFM発注問合せ番号
+customerId = カスタマーID
+trendUserId = トレンドユーザーID
+mvbAccount = MVBアカウント
+licenseStatus = ライセンス状態
+momCompanyId = MoM企業ID
+picNameSei = 担当者氏名_姓
+picNameMei = 担当者氏名_名
+prefectures = 都道府県
+municipality = 市区町村
+initialPassword = 初期パスワード
+casLicenseManagementInfoList = CASライセンス管理情報
+lastContractSyncDate = 最終契約同期日付
+subscriptionId = サブスクリプションID
+servicePlanId = サービスプランID
+licenseTermStart = ライセンス開始日
+licenseTermEnd = ライセンス終了日
