--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -496,9 +496,9 @@ EntityDoesNotExistLicense.MSG = 指定した{0}が存在しません。
 LicenseProcessUpdateError.ID = RLI00002
 LicenseProcessUpdateError.TYPE = Error
 LicenseProcessUpdateError.MSG = {0}失敗したため、{1}できませんでした。
-LicenseArrangementWorkCompleteError.ID = RLI00002
+LicenseArrangementWorkCompleteError.ID = RLI00003
 LicenseArrangementWorkCompleteError.TYPE = Error
-LicenseArrangementWorkCompleteError.MSG = エラーが発生したため、該当する手配を{0}できませんでした。
+LicenseArrangementWorkCompleteError.MSG = エラーが発生したため、該当する手配業務を{0}できませんでした。
 
 #情報ID(バッチ)
 BatchCreateFileStartInfo.ID = IBA00001
