--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -495,7 +495,7 @@ EntityDoesNotExistLicense.TYPE = Error
 EntityDoesNotExistLicense.MSG = 指定した{0}が存在しません。
 LicenseProcessUpdateError.ID = RLI00002
 LicenseProcessUpdateError.TYPE = Error
-LicenseProcessUpdateError.MSG = {0}失敗したため、{1}できませんでした。
+LicenseProcessUpdateError.MSG = {0}に失敗したため、{1}できませんでした。
 LicenseArrangementWorkCompleteError.ID = RLI00003
 LicenseArrangementWorkCompleteError.TYPE = Error
 LicenseArrangementWorkCompleteError.MSG = エラーが発生したため、{0}できませんでした。
