#8708 ライセンスメッセージ追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -499,6 +499,12 @@ LicenseProcessUpdateError.MSG = {0}に失敗したため、{1}できませんで
 LicenseArrangementWorkCompleteError.ID = RLI00003
 LicenseArrangementWorkCompleteError.TYPE = Error
 LicenseArrangementWorkCompleteError.MSG = エラーが発生したため、{0}できませんでした。
+LicenseCsvTargetCheckError.ID = RLI00004
+LicenseCsvTargetCheckError.TYPE = Error
+LicenseCsvTargetCheckError.MSG = CSV出力対象の{0}ではありません。
+LicenseCsvTargetOutputError.ID = RLI00005
+LicenseCsvTargetOutputError.TYPE = Error
+LicenseCsvTargetOutputError.MSG = CSV出力できる{0}がありません。
 
 #情報ID(バッチ)
 BatchCreateFileStartInfo.ID = IBA00001
