--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -501,10 +501,7 @@ LicenseArrangementWorkCompleteError.TYPE = Error
 LicenseArrangementWorkCompleteError.MSG = エラーが発生したため、{0}できませんでした。
 LicenseCsvTargetCheckError.ID = RLI00004
 LicenseCsvTargetCheckError.TYPE = Error
-LicenseCsvTargetCheckError.MSG = CSV出力対象の{0}ではありません。
-LicenseCsvTargetOutputError.ID = RLI00005
-LicenseCsvTargetOutputError.TYPE = Error
-LicenseCsvTargetOutputError.MSG = CSV出力できる{0}がありません。
+LicenseCsvTargetCheckError.MSG = 該当の商品はCSV出力対象ではありません。
 
 #情報ID(バッチ)
 BatchCreateFileStartInfo.ID = IBA00001
