契約エンティティ項目追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1420,3 +1420,4 @@ subscriptionId = サブスクリプションID
 servicePlanId = サービスプランID
 licenseTermStart = ライセンス開始日
 licenseTermEnd = ライセンス終了日
+mvbAccountEntryDiv = MVBアカウント登録区分
