バウンスメール記録、バウンスメール宛先Entity追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1422,3 +1422,16 @@ productClassDiv = 商品種類区分
 domain = ドメイン
 estimationContractType = 見積/契約種別
 itemMasterIdList = 品種マスタIDリスト
+docNumber = 文書番号
+mailTemplateMasterId = メールテンプレートマスタID
+nXContractId = N_X_CONTRACT_ID
+nXMailer = N_X_MAILER
+nXNpserviceno = N_X_NPSERVICENO
+nXNservicelineno = N_X_NSERVICELINENO
+nXNdomainlineno = N_X_NDOMAINLINENO
+nXNguidetargettype = N_X_NGUIDETARGETTYPE
+nXJizenflg = N_X_JIZENFLG
+nErrorFlg = N_ERROR_FLG
+bounceMailDestinationList = バウンスメール宛先
+bounceMailRecord = バウンスメール記録
+destinationDiv = 宛先区分
