ライセンスドメインエラーメッセージ追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -489,6 +489,23 @@ ExternalLinkageClosedFileImportError.ID = REX00004
 ExternalLinkageClosedFileImportError.TYPE = Error
 ExternalLinkageClosedFileImportError.MSG = 今月分のファイル取り込みは完了したため、新たなファイル取り込みはできません。
 
+#エラーID(ライセンス)
+EntityDoesNotExistLicense.ID = RLI00001
+EntityDoesNotExistLicense.TYPE = Error
+EntityDoesNotExistLicense.MSG = 指定した{0}が存在しません。
+LicenseProcessUpdateError.ID = RLI00002
+LicenseProcessUpdateError.TYPE = Error
+LicenseProcessUpdateError.MSG = {0}に失敗したため、{1}できませんでした。
+LicenseArrangementWorkCompleteError.ID = RLI00003
+LicenseArrangementWorkCompleteError.TYPE = Error
+LicenseArrangementWorkCompleteError.MSG = エラーが発生したため、{0}できませんでした。
+LicenseCsvTargetCheckError.ID = RLI00004
+LicenseCsvTargetCheckError.TYPE = Error
+LicenseCsvTargetCheckError.MSG = 該当の商品はCSV出力対象ではありません。
+LicenseParameterAlreadyExistError.ID = RLI00005
+LicenseParameterAlreadyExistError.TYPE = Error
+LicenseParameterAlreadyExistError.MSG = 指定した{0}が既に存在します。
+
 #情報ID(バッチ)
 BatchCreateFileStartInfo.ID = IBA00001
 BatchCreateFileStartInfo.TYPE = Info
