トレンドマイクロ連携WORKテーブル追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1454,3 +1454,44 @@ servicePlanId = サービスプランID
 licenseTermStart = ライセンス開始日
 licenseTermEnd = ライセンス終了日
 mvbAccountEntryDiv = MVBアカウント登録区分
+arrangementWorkId = 手配業務ID
+firstName = 担当者名
+lastName = 担当者姓
+email = メールアドレス
+timeZone = タイムゾーン
+language = 言語
+phoneAreaCode = 市外局番
+phoneExtension = 内線番号
+serviceUrl = ログイン画面URL
+versionlicenceVersion = 製品版/体験版
+acCode = アクティベーションコード
+units = シート数
+licenseStartDate = ライセンス開始日
+licenseExpirationDate = ライセンス終了日
+startChargeDate = 課金開始日
+unitsPerLicense = ユニット数
+name = 会社
+state　= 都道府県
+country = 国
+city = 市区町村
+postalCode = 郵便番号
+note = 備考
+emergencyEmail = その他のメールアドレス
+httpStatus = HTTPステータス
+licenceMappedStatus = ライセンス反映状態
+requestStatus = 送信状態
+requestTime = 送信時刻
+url = URL
+httpHeader = HttpHeader
+httpBody = HttpBody
+userLoginName = ログインアカウント
+userPassword = ログインパスワード
+userResetpasswordurl = リセット用パスワードURL
+userFirstName = 担当者名
+userLastName = 担当者姓
+userEmail = メールアドレス
+userTimeZone = タイムゾーン
+userLanguage = 言語
+companyCountry = 国
+companyCity = 市区町村
+companyState = 都道府県
