#8718 ファイル取込管理登録DTOのフィールド名追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1434,3 +1434,6 @@ registryType = 登録種別
 vendorManageNumberName = ベンダー管理番号名称
 serviceProviderCompanyName = サービス提供会社名
 penaltyFfmOrderContactNo = FFM発注問合せ番号
+
+# ファイル取込
+importUser = 取込実施者
