--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1437,3 +1437,17 @@ penaltyFfmOrderContactNo = FFM発注問合せ番号
 
 # ファイル取込
 importUser = 取込実施者
+
+checkRequiredFlg = チェック必須フラグ
+beforeUnitPrice = 変更前単価
+attachedRequiredFlg = 添付必須フラグ
+ssWorkRequestCreate_flg = S&S作業依頼フラグ
+purchaseManageNumber = 仕入用管理No
+makerCode = メーカーコード
+classificationCode = 分類コード
+machineType = 機器区分
+equipmentName = 機種名
+absConExternalBillingStatus = 統合契約外部請求処理状態
+itemDecomposeName = 分解後品種名
+itemDecomposePrice = 分解後原価
+businessAcceptBranchNumber = 業務受付枝番
