#8722_エラーメッセージの追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -497,6 +497,9 @@ ExternalLinkageDoesNotExcessAmountItemError.MSG = 指定した品種コードは
 ExternalLinkageClosedFileImportError.ID = REX00004
 ExternalLinkageClosedFileImportError.TYPE = Error
 ExternalLinkageClosedFileImportError.MSG = 今月分のファイル取り込みは完了したため、新たなファイル取り込みはできません。
+ExternalLinkageNotingDetails.ID = REX00005
+ExternalLinkageNotingDetails.TYPE = Error
+ExternalLinkageNotingDetails.MSG = 指定したエラー詳細が存在しません。
 
 #エラーID(ライセンス)
 EntityDoesNotExistLicense.ID = RLI00001
