#8485 契約、手配業務添付ファイルエンティティに添付必須フラグ追加、必須添付ファイル検索用DTO追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1414,3 +1414,7 @@ registryType = 登録種別
 vendorManageNumberName = ベンダー管理番号名称
 serviceProviderCompanyName = サービス提供会社名
 penaltyFfmOrderContactNo = FFM発注問合せ番号
+attachedRequiredFlg = 添付必須フラグ
+productClassDiv = 商品種類区分
+domain = ドメイン
+estimationContractType = 見積/契約種別
