#8485 契約、手配業務添付ファイルエンティティに添付必須フラグ追加、必須添付ファイル検索用DTO追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1425,3 +1425,7 @@ bounceMailRecord = バウンスメール記録
 destinationDiv = 宛先区分
 to = TO
 cc = CC
+attachedRequiredFlg = 添付必須フラグ
+productClassDiv = 商品種類区分
+domain = ドメイン
+estimationContractType = 見積/契約種別
