ファイル拡張子不一致時のエラーメッセージを追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -204,6 +204,9 @@ EntityMissingAttachmentError.MSG = {0}が添付されていません。
 FileFormatInvalidError.ID = ROT00115
 FileFormatInvalidError.TYPE = Error
 FileFormatInvalidError.MSG = 選択したファイルは取込できません。ファイルフォーマットを確認してください。
+RequiredFileExtensionNotMatchError.ID = ROT00116
+RequiredFileExtensionNotMatchError.TYPE = Error
+RequiredFileExtensionNotMatchError.MSG = {0}の拡張子が設定可能な拡張子ではありません。設定可能な拡張子は{1}です。
 
 #エラーID(共通:その他)
 UnsupportedProcessError.ID = ROT90001
