#9302_バージョンを修正

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1454,3 +1454,47 @@ absConExternalBillingStatus = 統合契約外部請求処理状態
 itemDecomposeName = 分解後品種名
 itemDecomposePrice = 分解後原価
 businessAcceptBranchNumber = 業務受付枝番
+prefectures = 都道府県
+yamatoSlipNumber = ヤマト便お問合せ伝票番号
+buildingName = 建物名
+contractEquipmentId = 契約機種ID
+itemContractId = 品種(契約用)ID
+itemNo = 製品番号
+optionName = オプション名
+thingItemCode = 物あり品種コード
+shippingMachineName = 発送機器名称
+defaultQuantity = 数量
+ffmInsideTransExclusionFlg = FFM内部振替除外フラグ
+productSpreadsheetFlg = プロダクト確認集計表フラグ
+continueFlg = 継続フラグ
+reContractNotAllowedFlg = 再契約不可フラグ
+deleteFlg = 削除フラグ
+contractYears = 契約年数
+penaltyDetailContractId = 違約金明細ID
+contractTypeDetail = 契約種別詳細
+licenseDivMasterId = ライセンス区分マスタID
+completeProcessOrder = 完了工程順
+completeProcessMasterId = 完了ライセンス工程マスタID
+completeArrangementWorkId = 完了手配業務ID
+workingProcessOrder = 作業中工程順
+workingProcessMasterId = 作業中ライセンス工程マスタID
+workingArrangementWorkId = 作業中手配業務ID
+cancelStatus = キャンセル状態
+csvOutputFlg = CSV出力フラグ
+processLockStatus = 工程ロック状態
+licenseKey = ライセンスキー
+licenseInfo = ライセンス情報
+processOrder = 工程順
+processMasterId = ライセンス工程マスタID
+arrangementWorkId = 手配業務ID
+operationDiv = 操作区分
+mailTemplateId = メールテンプレートID
+mailArrivalCheckFlg = メール到達チェックフラグ
+seqNumber = シーケンスNo
+captureFlg = 取込フラグ
+fileKindManagementId = ファイル種別管理マスタID
+attachmentFile = 添付ファイルID
+fileImportManagement = ファイル取込管理管理ID
+lineNumber = 行番号
+penaltyUnitPrice = 違約金単価
+penaltyAmountSummary = 違約金額
