--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1421,3 +1421,4 @@ attachedRequiredFlg = 添付必須フラグ
 productClassDiv = 商品種類区分
 domain = ドメイン
 estimationContractType = 見積/契約種別
+itemMasterIdList = 品種マスタIDリスト
