#8584_ライセンス工程に項目を追加、DB物理名変更に伴う修正

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1497,4 +1497,7 @@ attachmentFile = 添付ファイルID
 fileImportManagement = ファイル取込管理管理ID
 lineNumber = 行番号
 penaltyUnitPrice = 違約金単価
-penaltyAmountSummary = 違約金額
+penaltyAmountSummary = 違約金金額
+cityStreet = 市区町村番地
+goodsName = 製品名
+mailTypeDiv = メールタイプ区分
