#8663_Entity名称修正に伴う修正

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1444,7 +1444,7 @@ importUser = 取込実施者
 checkRequiredFlg = チェック必須フラグ
 beforeUnitPrice = 変更前単価
 attachedRequiredFlg = 添付必須フラグ
-ssWorkRequestCreate_flg = S&S作業依頼フラグ
+ssWorkRequestCreateFlg = S&S作業依頼フラグ
 purchaseManageNumber = 仕入用管理No
 makerCode = メーカーコード
 classificationCode = 分類コード
