--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -154,6 +154,9 @@ RequiredCheckListError.MSG = チェックリストのチェック内容を確認
 OeTodokesakiCodeError.ID = ROT00043
 OeTodokesakiCodeError.TYPE = Error
 OeTodokesakiCodeError.MSG = 上流システムコードに紐づく届先情報に不備があります。代表届先コード無、O/E届先コード無、受注可否区分が受注不可のいずれかに該当する届先は利用できません。拠点業務にご確認ください。
+ApprovalRouteInvalidError.ID = ROT00044
+ApprovalRouteInvalidError.TYPE = Error
+ApprovalRouteInvalidError.MSG = 承認ルートの設定に不備があります。管理者にお問い合わせください。
 
 #エラーID(共通:ファイル系)
 FileNotFoundError.ID = ROT00100
