--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -151,6 +151,12 @@ JsonParseError.MSG = JSON文字列の解析/変換に失敗しました。
 RequiredCheckListError.ID = ROT00042
 RequiredCheckListError.TYPE = Error
 RequiredCheckListError.MSG = チェックリストのチェック内容を確認してください。未チェックのチェックボタンがあります。
+JsonConvertFormTextToObjectError.ID = ROT00043
+JsonConvertFormTextToObjectError.TYPE = Error
+JsonConvertFormTextToObjectError.MSG = JSON文字列からObjectの変換に失敗しました。
+JsonConvertFromObjectToTextError.ID = ROT00044
+JsonConvertFromObjectToTextError.TYPE = Error
+JsonConvertFromObjectToTextError.MSG = ObjectからJSON文字列の変換に失敗しました。
 
 #エラーID(共通:ファイル系)
 FileNotFoundError.ID = ROT00100
