--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1507,3 +1507,8 @@ penaltyAmountSummary = 違約金金額
 cityStreet = 市区町村番地
 goodsName = 製品名
 mailTypeDiv = メールタイプ区分
+mailMasterId = メールマスタID
+mailAddressDiv = メールアドレス区分
+targetEntityName = 対象エンティティ名
+targetFieldName = 対象フィールド名
+mailTemplateMasterId = メールテンプレートマスタID
