--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -461,6 +461,9 @@ UnlinkedError.MSG = {0}が未連携です。連携するまでお待ちくださ
 ArrangementLicenseError.ID = RAR00026
 ArrangementLicenseError.TYPE = Error
 ArrangementLicenseError.MSG = 手配に紐づくライセンス工程が受付できないため、手配受付は行えません。
+SearchOtherThanProductNameError.ID = RAR00027
+SearchOtherThanProductNameError.TYPE = Error
+SearchOtherThanProductNameError.MSG = 商品名を除いて、必ず一つは検索条件を入力してください。
 
 #エラーID(コミュニケーション)
 EntityDoesNotExistCommunication.ID = RCM00001
