--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -466,7 +466,7 @@ ArrangementLicenseError.TYPE = Error
 ArrangementLicenseError.MSG = 手配に紐づくライセンス工程が受付できないため、手配受付は行えません。
 SearchOtherThanProductNameError.ID = RAR00027
 SearchOtherThanProductNameError.TYPE = Error
-SearchOtherThanProductNameError.MSG = 商品名を除いて、必ず一つは検索条件を入力してください。
+SearchOtherThanProductNameError.MSG = 商品名を除いて、必ず一つは検索条件を設定してください。
 
 #エラーID(コミュニケーション)
 EntityDoesNotExistCommunication.ID = RCM00001
