--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1519,3 +1519,4 @@ mailAddressDiv = メールアドレス区分
 targetEntityName = 対象エンティティ名
 targetFieldName = 対象フィールド名
 mailTemplateMasterId = メールテンプレートマスタID
+rmaContractNumber = RMA契約開始日
