DTOのテスト追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -1540,4 +1540,4 @@ mailAddressDiv = メールアドレス区分
 targetEntityName = 対象エンティティ名
 targetFieldName = 対象フィールド名
 mailTemplateMasterId = メールテンプレートマスタID
-rmaContractNumber = RMA契約開始日
+rmaContractNumber = RMA契約番号
