PCP整合性チェックメッセージ追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -286,6 +286,9 @@ VupLinkageCancellationFoundError.MSG = 解約はV-UP反映不要です。
 RunningPricesUnMatchError.ID = RES00023
 RunningPricesUnMatchError.TYPE = Error
 RunningPricesUnMatchError.MSG = ランニングの明細の価格と品種マスタの価格が一致しません。
+MismatchPcpProductSpecificEroor.ID = RES00024
+MismatchPcpProductSpecificEroor.TYPE = Error
+MismatchPcpProductSpecificEroor.MSG = 商材積上げで積上げた数量と商材固有項目の継続する機器の数量が一致しません。
 
 #エラーID(契約)
 EntityDoesNotExistContract.ID = RCO00001
